<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Chat Story</string>
    <string name="skip">Skip</string>
    <string name="title_menu_1">Capture Your Moments</string>
    <string name="desc_menu_1">Because Everyone Has A Story.</string>
    <string name="title_menu_2">Upload Your Story</string>
    <string name="desc_menu_2">Let your emotions run free with Chat Story- the ultimate chat story app.</string>
    <string name="title_menu_3">Join With Us</string>
    <string name="desc_menu_3">Lets start your journey.</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_story">Add Your Story</string>
    <string name="add_story_reminder">Add File and Description First</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="description">Description</string>
    <string name="created_at">Created Date</string>

    <string name="camera_x">CameraX</string>
    <string name="camera">Camera</string>
    <string name="gallery">Galery</string>
    <string name="upload">Upload</string>
    <string name="image">Image</string>
    <string name="fill">Fill first</string>

    <string name="retry">Retry Again</string>
    <string name="timeout">Timeout</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>

    <string name="maps">Maps</string>

    <string name="dialog_title">Confirmation</string>
    <string name="dialog_message">Upload With Your Location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="dateFormat">Uploaded on %1$s</string>

</resources>