<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addstory"
        android:title="@string/add_story"
        android:titleCondensed="@string/add_story"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:titleCondensed="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always" />

    <item
        android:id="@+id/maps"
        android:title="@string/maps"
        android:titleCondensed="@string/maps"
        android:icon="@drawable/ic_location_on"
        app:showAsAction="always" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:titleCondensed="@string/logout"
        android:icon="@drawable/ic_baseline_logout_24"
        app:showAsAction="always" />
</menu>